tests/core/snapshots/experimental-headers-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Experimental headers must start with 'x-' or 'X-'. Got: 'bar'",
    "trace": [
      "schema",
      "@server",
      "headers",
      "experimental"
    ],
    "description": null
  },
  {
    "message": "Experimental headers must start with 'x-' or 'X-'. Got: 'foo'",
    "trace": [
      "schema",
      "@server",
      "headers",
      "experimental"
    ],
    "description": null
  },
  {
    "message": "Experimental headers must start with 'x-' or 'X-'. Got: 'gqlforge'",
    "trace": [
      "schema",
      "@server",
      "headers",
      "experimental"
    ],
    "description": null
  },
  {
    "message": "Experimental headers must start with 'x-' or 'X-'. Got: 'non-experimental'",
    "trace": [
      "schema",
      "@server",
      "headers",
      "experimental"
    ],
    "description": null
  }
]
