tests/core/snapshots/experimental-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(headers: { experimental: ["X-experimental", "x-gqlforge"] })
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  id: Int
  name: String
}
