tests/core/snapshots/graphql-conformance-001.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 4,
        "name": "Gqlforge",
        "city": "Globe"
      }
    }
  }
}
