tests/core/snapshots/graphql-conformance-003.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 4,
        "name": "Gqlforge",
        "profilePic": "pic_100_200"
      }
    }
  }
}
